@@ -1,61 +1,54 @@
 package org.ebook.entity;
 
-import org.ebook.DatabaseUtils;
-import org.hibernate.*;
+import org.ebook.util.DatabaseUtils;
 
-import javax.persistence.criteria.*;
-import java.util.LinkedList;
+import java.util.*;
 
 public class UserManager {
-    public static User getUserByName(String username){
-        LinkedList<User> users = null;
-        Session session = DatabaseUtils.getSession();
-        try {
-            CriteriaBuilder cb = session.getCriteriaBuilder();
-            CriteriaQuery<User> cr = cb.createQuery(User.class);
-            Root from = cr.from(User.class);
-            cr.select(from);
-            cr.where(cb.equal(from.get("username"), username));
-            users = new LinkedList<User>(session.createQuery(cr).getResultList());
-        } catch (HibernateException e) {
-            e.printStackTrace();
-        } finally {
-            session.close();
-        }
+    public static User getUserByUid(int uid){
+        List<User> users = DatabaseUtils.createQuery(User.class)
+                .equal("uid", uid)
+                .getResult();
         if(users == null){
             return null;
         }else{
             if(users.isEmpty()){
                 return null;
             }
-            return users.getFirst();
+            return users.get(0);
+        }
+    }
+    public static User getUserByName(String username){
+        List<User> users = DatabaseUtils.createQuery(User.class)
+                .equal("username", username)
+                .getResult();
+        if(users == null){
+            return null;
+        }else{
+            if(users.isEmpty()){
+                return null;
+            }
+            return users.get(0);
         }
     }
     public static User getUserByEmail(String email){
-        if(email == null){
-            return null;
-        }
-        LinkedList<User> users = null;
-        Session session = DatabaseUtils.getSession();
-        try {
-            CriteriaBuilder cb = session.getCriteriaBuilder();
-            CriteriaQuery<User> cr = cb.createQuery(User.class);
-            Root from = cr.from(User.class);
-            cr.select(from);
-            cr.where(cb.equal(from.get("email"), email));
-            users = new LinkedList<User>(session.createQuery(cr).getResultList());
-        } catch (HibernateException e) {
-            e.printStackTrace();
-        } finally {
-            session.close();
-        }
+        List<User> users = DatabaseUtils.createQuery(User.class)
+                .equal("email", email)
+                .getResult();
         if(users == null){
             return null;
         }else{
             if(users.isEmpty()){
                 return null;
             }
-            return users.getFirst();
+            return users.get(0);
         }
+    }
+    public static int getUid(String username){
+        User user = getUserByName(username);
+        if(user == null){
+            return -1;
+        }
+        return user.getUid();
     }
 }
